# awadb

./: CMakeLists.txt  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
awadb/: __init__.py  awadb_api.py  library.py  punctuation_marks_en.py  stop_words_en.py  words_stem_en.py
awadb/awa_embedding/: __init__.py  clipembedding.py  huggingface.py  openai.py  test.py
awadb/db_engine/c_api/: gamma_api.cc  gamma_api.h
awadb/db_engine/c_api/api_data/: gamma_cpp_api.cc  gamma_cpp_api.h  gamma_doc.cc  gamma_doc.h  gamma_request.cc  gamma_request.h  gamma_response.cc  gamma_response.h  gamma_table.cc  gamma_table.h
awadb/db_engine/common/: common_query_data.h  gamma_common_data.h
awadb/db_engine/cpp_api/: awadb_cpp_interface.h
awadb/db_engine/idl/fbs-gen/c/: batch_result_generated.h  config_generated.h  doc_generated.h  engine_status_generated.h  request_generated.h  response_generated.h  table_generated.h  types_generated.h
awadb/db_engine/idl/fbs-gen/go/gamma_api/: Attribute.go  BatchResult.go  CacheInfo.go  Config.go  DataType.go  Doc.go  EngineStatus.go  Field.go  FieldInfo.go  RangeFilter.go  Request.go  Response.go  ResultItem.go  SearchResult.go  SearchResultCode.go  Table.go  TermFilter.go  VectorInfo.go  VectorQuery.go
awadb/db_engine/idl/fbs-gen/python/gamma_api/: Attribute.py  BatchResult.py  CacheInfo.py  Config.py  Doc.py  EngineStatus.py  Field.py  FieldInfo.py  RangeFilter.py  Request.py  Response.py  ResultItem.py  SearchResult.py  Table.py  TermFilter.py  VectorInfo.py  VectorQuery.py
awadb/db_engine/index/impl/: gamma_index_binary_ivf.cc  gamma_index_ivfflat.cc  gamma_index_ivfflat.h  gamma_index_ivfpq.cc  gamma_index_ivfpq.h
awadb/db_engine/index/impl/hnswlib/: gamma_index_hnswlib.cc
awadb/db_engine/search/: awadb_retrieval.cc  awadb_retrieval.h  gamma_engine.cc  gamma_engine.h  gamma_table_io.cc
awadb/db_engine/storage/: lru_cache.h  segment.cc  storage_manager.cc  string_block.h  vector_block.cc
awadb/db_engine/table/: docid_fields_mgr.cc  docid_fields_mgr.h  field_column_data.cc  field_column_data.h  field_range_index.cc  field_range_index.h  range_query_result.h  table.cc  table.h
awadb/db_engine/tests/: test_files.cc
awadb/db_engine/vector/: memory_raw_vector.h  mmap_raw_vector.h  raw_vector.h  vector_manager.cc  vector_manager.h
awadb/interface/: awadb_python_interface.cpp
awadb/llm_embedding/: __init__.py  base.py  huggingface.py  openai.py
awadb/py_idl/: awadb_pb2.pyi  awadb_pb2_grpc.py
awadb/service_clients/: awadb_client.py
clients/: README.md  pyproject.toml  setup.py
clients/awadb/: client.py
clients/awadb/py_idl/: awadb_pb2.py  awadb_pb2_grpc.py
clients/awadb_client/: __init__.py  awadb_api.py  client.py
clients/awadb_client/py_idl/: awadb_pb2.pyi  awadb_pb2_grpc.py
deploy/: docker-compose.yml
docs/: add_tutorial.html  api.html  delete_tutorial.html  deploy.html  deploy.md  docker_python_api.html  features.html  genindex.html  get_tutorial.html  getstarted.html  index.html  init_client_tutorial.html  installation.html  integrations.html  langchain.html  native_python_api.html  objects.inv  py-modindex.html  restful_api.html  restful_api.md  restful_tutorial.html  restful_tutorial.md  search.html  search_tutorial.html  searchindex.js  tutorials.html
docs/_sources/: add_tutorial.md.txt  docker_python_api.rst.txt  getstarted.rst.txt  init_client_tutorial.md.txt  installation.md.txt
docs/awadb/: index.html  init.html
docs/get_started/: contribute.html  index.html  introduction.html
docs/html_source/source/: conf.py  globaltoc.html  index.rst
docs/html_source/source/awadb/: index.rst  init.rst
docs/html_source/source/get_started/: contribute.rst
docs/source/: api.rst  conf.py  docker_deploy.md  index.rst  introduction.md  langchain.md  restful_api.md  restful_tutorial.md
docs/source/get_started/: index.rst
docs/usecase/: index.html
examples/: README.md  langchain_demo.ipynb
examples/.ipynb_checkpoints/: knowledge-checkpoint.txt
examples/chatglm/: chatglm-6b.ipynb
examples/llama.cpp/: README.md  test_retrieval_qa.py
examples/llama.cpp/data/: liulangdiqiu.txt
hub/: Dockerfile  README.md  RESTfulAPI.md  go.mod  go.sum  hub_local_proxy.go
hub/go_idl/: awadb.pb.go  awadb_grpc.pb.go
hub/hub/awadb.io/go/pb_grpc/: awadb.pb.go  awadb_grpc.pb.go
service/: Dockerfile  init_env.sh
service/clients/cpp/: awadb_client.cc
service/clients/python/: asyncio_awadb_client.py
service/protos/: awadb.proto
service/servers/local/: awadb_async_call.cc  awadb_async_call.h  awadb_server.cc  awadb_server.h
tests/: Makefile  test.md  test_EmbeddingText.txt  test_LangChain_MMR_Search.txt  test_LangChain_MetaFilter.txt  test_Vector1.txt  test_awadb.py  test_awadb2.py  test_awadb_client.py  test_restful_client.py
